# jkdashtui

./: Cargo.toml  LICENSE  README.md
src/: app.rs  error.rs  event.rs  lib.rs  main.rs  services.rs  tasks.rs  ui.rs
src/app/: state.rs
src/services/: binance.rs  http.rs  weather.rs
src/tasks/: btc.rs  input.rs  weather.rs
