[package]
name = "jkdashtui"
version = "0.1.0"
description = "An example generated using the simple template"
authors = ["JkLondon <me@ilyamikheev.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rand = "0.9.2"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = "1.0.219"
serde_json = "1.0.143"
